--- a/src/renderer/src/components/GridScroller/GridScroller.module.scss
+++ b/src/renderer/src/components/GridScroller/GridScroller.module.scss
@@ -3,6 +3,9 @@
 .label {
   padding-bottom: 10px;
   padding-left: 10px;
+  overflow: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
 }
 
 .tile {
